03-ingress/k8s/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
          image: auth-service-2:latest
          ports:
            - containerPort: 5051
