03-ingress/k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 5051
      nodePort: 30001
  type: NodePort
